cluster/apps/vaultwarden/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vaultwarden
  namespace: vaultwarden
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
  hostnames:
    - vaultwarden.${domain_name}
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: vaultwarden-app
          port: 80
