cluster/apps/vaultwarden/app/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: vaultwarden
  namespace: vaultwarden
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`vaultwarden.${domain_name}`) && PathPrefix(`/`)
      services:
        - kind: Service
          name: vaultwarden
          namespace: vaultwarden
          port: 80
